# pci-catalog

./: .gitignore  .roomodes  MongoDB-README.md  PRD.md  README.md  To-do.md  database-catalog-plan.md  main.js  mongo-test.js  mongo_debug_log.txt  package-lock.json  package.json  preload.js  svelte.config.js  tailwind.config.js  test-direct-push-2.txt  test-direct-push.txt  test-env-push.txt  test-push-update.txt  test-push.txt  test-ssh-push.txt  tsconfig.json  vite.config.ts  vitest-setup-client.ts  vitest.config.ts
.context/sessions/: 2025-03-27-aegis-start-session.md  2025-03-27-task-021-start.md  2025-03-29-pre-release-testing.md
.context/tasks/active/: TASK-021.md  TASK-062.md
.context/tasks/hold/: TASK-020.md
.cursor/rules/: svelte-rules.mdc  tauri-rule.mdc
config/: default.js
docs/: Metadata bug summary.md  README.md  database-catalog-plan.md  mongodb-schema.md  reorganization-plan.md
docs/api/: endpoints-reference.md
docs/architecture/: audio-processing-pipeline.md  authentication-flow.md  database-schema.md  overview.md  r2-storage-design.md  requirements.md
docs/guides/: cloudflare-r2-integration-guide.md  deployment-guide.md  development-environment-setup.md  development-roadmap.md  error-handling-guide.md  localization-guide.md  performance-optimization-guide.md  security-best-practices-guide.md  testing-strategy.md  ui-component-guide.md  user-management-guide.md
docs/tasks completed/: audio_workflow_fix_summary_20250405.md  metadata_extraction_fix_20250406.md  publisher_editor_integration_20250407.md  refactoring_summary_20250405.md  session_summary_20250403_172540.md  session_summary_20250403_1947.md  session_summary_20250404_134427.md  session_summary_20250404_1420_transcoding_crash.md
project.inlang/: project_id
renderer/: index.html  renderer.js  styles.css
scripts/: git-push.js  mongodb_setup.js  setup_mongodb.js  setup_mongodb.mjs  test_mongodb_connection.js  test_mongodb_connection.mjs
src/: global.d.ts  hooks.server.ts  upload.rs
src-tauri/: Cargo.toml  dev_credentials.json  tauri.conf.json
src-tauri/src/: commands.rs  credentials.rs  error.rs  lib.rs  main.rs  upload.rs
src-tauri/src/audio/: metadata.rs  mod.rs  transcoding.rs
src-tauri/src/core/: commands_old.rs  mod.rs  r2.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/catalog/: mod.rs
src-tauri/src/features/catalog/storage/: catalog_storage_actions.rs  mod.rs  mongodb.rs
src-tauri/src/features/credentials/: mod.rs
src-tauri/src/features/upload/: mod.rs
src-tauri/src/features/upload/audio/: error.rs  metadata.rs  mod.rs  transcode.rs
src-tauri/src/storage/: mod.rs  mongodb.rs  r2.rs
src/features/catalog/: utils.ts
src/features/upload/components/: BulkMetadataForm.svelte  IndividualMetadataForm.svelte  MetadataEditor.svelte  PublisherEditor.svelte  TrackList.svelte  UploadMetadataEditor.svelte  WriterEditor.svelte
src/lib/components/: TagSelector.svelte
src/lib/components/common/: FileUploader.svelte  TagSelector.svelte
src/lib/components/layout/: NotificationsDisplay.svelte
src/lib/stores/: notifications.ts  tagData.ts
src/lib/types/: catalog.ts
src/lib/utils/: invokeWrapper.ts
src/models/: file.js
src/routes/: +layout.svelte  +page.svelte
src/routes/catalog/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/upload/: +page.svelte
src/services/: db.js  storage.js
src/stories/: Configure.mdx
tests/: README.md  setup.ts
tests/integration/catalog-management/: track_management.test.ts
tests/integration/credential-management/: credential_storage.test.ts  mongo_credentials.test.ts
tests/integration/upload-workflow/: album_association.test.ts  upload_workflow.test.ts
tests/types/: index.ts  rust-tauri.d.ts
tests/unit/backend/features/catalog/storage/: mongo_connection.test.ts  r2_connection.test.ts
tests/unit/backend/metadata/: album_creation.test.ts  metadata_extraction.test.ts
tests/unit/backend/storage/: mongo_connection.test.ts
tests/unit/frontend/features/catalog/components/: BulkEditForm.test.ts
tests/unit/frontend/routes/catalog/: CatalogPage.test.ts  catalog.page.svelte.test.ts
