[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
mongodb = { version = "2.6.1", features = ["tokio-runtime"] }
tokio = { version = "1.35.1", features = ["full", "sync"] }
futures-util = "0.3.29"
futures = "0.3.29"
parking_lot = "0.12.1"
aws-config = "1.1.1"
aws-sdk-s3 = "1.12.0"
aws-smithy-types = "1.1.1"
bytes = "1.5.0"
http = "0.2.9"
anyhow = "1.0.75"
thiserror = "1.0.50"
dirs = "5.0"
keyring = { version = "3.6.2", features = ["apple-native"] }
security-framework = "3.2.0"

[features]
